--- a/public/assets/route/default/pages/css/detil.css
+++ b/public/assets/route/default/pages/css/detil.css
@@ -1,5 +1,3 @@
-/* New */
-
 .custom-height-setter {
     transition: all 0.3s ease !important;
 }
@@ -54,20 +52,25 @@
     max-width: var(--avatar-wh);
 }
 
-
 #commit-bantuan-area .button.donasi.btn-lg {
     font-size: 1rem;
 }
 
-
 #info-berita-area .content .app-image.img-wrapper {
     max-height: calc((100% - var(--bs-gutter-x)) / 16 * 9);
+    min-height: calc((100% - var(--bs-gutter-x)) / 16 * 9);
+}
+
+#detil-banner-area .app-image.img-wrapper img {
+    min-height: inherit;
+    width: 100%;
 }
 
 @media (min-width: 320px) {
 
     #detil-banner-area .app-image.img-wrapper {
         max-height: 166.5px;
+        min-height: 166.5px;
     }
 }
 
@@ -75,6 +78,7 @@
 
     #detil-banner-area .app-image.img-wrapper {
         max-height: calc((100vw - var(--bs-gutter-x)) / 16 * 9);
+        min-height: calc((100vw - var(--bs-gutter-x)) / 16 * 9);
     }
 }
 
@@ -82,6 +86,7 @@
 
     #detil-banner-area .app-image.img-wrapper {
         max-height: 197.62px;
+        min-height: 197.62px;
     }
 
     #commit-bantuan-area {
@@ -97,6 +102,7 @@
 
     #detil-banner-area .app-image.img-wrapper {
         max-height: calc((100vw - var(--bs-gutter-x)) / 16 * 9);
+        min-height: calc((100vw - var(--bs-gutter-x)) / 16 * 9);
     }
 }
 
@@ -104,6 +110,7 @@
 
     #detil-banner-area .app-image.img-wrapper {
         max-height: 225.748px;
+        min-height: 225.748px;
     }
 
     #commit-bantuan-area .button.donasi.btn-lg {
@@ -119,6 +126,7 @@
 
     #detil-banner-area .app-image.img-wrapper {
         max-height: calc((100vw - var(--bs-gutter-x)) / 16 * 9);
+        min-height: calc((100vw - var(--bs-gutter-x)) / 16 * 9);
     }
 }
 
@@ -126,6 +134,7 @@
 
     #detil-banner-area .app-image.img-wrapper {
         max-height: 239.625px;
+        min-height: 239.625px;
     }
 
     #commit-bantuan-area p {
@@ -137,6 +146,7 @@
 
     #detil-banner-area .app-image.img-wrapper {
         max-height: 290.25px;
+        min-height: 290.25px;
     }
 }
 
@@ -168,6 +178,7 @@
 
     #detil-banner-area .app-image.img-wrapper {
         max-height: calc((569px / 1913) * 936);
+        min-height: calc((569px / 1913) * 936);
     }
 
     #commit-bantuan-area p {
@@ -186,11 +197,13 @@
 @media (min-width: 1200px) {
     #detil-banner-area .app-image.img-wrapper {
         max-height: calc((569px / 1913) * 1116);
+        min-height: calc((569px / 1913) * 1116);
     }
 }
 
 @media (min-width: 1400px) {
     #detil-banner-area .app-image.img-wrapper {
         max-height: calc((569px / 1913) * 1296);
+        min-height: calc((569px / 1913) * 1296);
     }
 }
