--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><?= $this->getTitle() . Config::get('defaults/default_title') ?></title>
+    <title>
+        <?= $this->getTitle() . Config::get('defaults/default_title') ?>
+    </title>
     <link rel="shortcut icon" href="/assets/images/brand/favicon-pojok-icon.ico" type="image/x-icon">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
@@ -13,15 +15,17 @@
     <link href="/vendors/nucleo/css/nucleo.css" rel="stylesheet">
     <link href="/vendors/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <!-- Argon CSS -->
-    <link type="text/css" href="/assets/main/css/argon.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <!-- Core Style -->
     <?= $this->getLinkRel('controller'); ?>
     <?= $this->getLinkRel('action'); ?>
+    <!-- Argon CSS -->
+    <link type="text/css" href="/assets/main/css/argon.min.css" rel="stylesheet">
 </head>
 
-<body <?= (isset($this->data['uri']) ? 'data-uri="'. $this->data['uri'] .'"' : '') ?> <?= (isset($this->data[Config::get('session/token_name')]) ? 'data-token="'. $this->data[Config::get('session/token_name')] .'"' : '') ?>>
+<body<?= (isset($this->data['uri']) ? ' data-uri="'. $this->data['uri'] .'"' : '') ?>
+    <?= (isset($this->data[Config::get('session/token_name')]) ? ' data-token="'. $this->data[Config::get('session/token_name')] .'"' : '') ?>>
 
     <!-- Sidenav -->
     <nav class="sidenav navbar navbar-vertical  fixed-left  navbar-expand-xs navbar-light bg-white" id="sidenav-main">
@@ -49,7 +53,8 @@
                     <!-- Navigation -->
                     <ul class="navbar-nav mb-md-3">
                         <li class="nav-item">
-                            <a class="nav-link <?= ($this->getController() == 'profile' ? 'active' : '') ?>" href="/admin/profile">
+                            <a class="nav-link <?= ($this->getController() == 'profile' ? 'active' : '') ?>"
+                                href="/admin/profile">
                                 <i class="ni ni-single-02 text-yellow"></i>
                                 <span class="nav-link-text">Profile</span>
                             </a>
@@ -72,7 +77,7 @@
             <div class="container-fluid">
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <!-- Navbar links -->
-                    <ul class="navbar-nav align-items-center  ml-md-auto ">
+                    <ul class="navbar-nav align-items-center ml-md-auto ">
                         <li class="nav-item d-xl-none">
                             <!-- Sidenav toggler -->
                             <div class="pr-3 sidenav-toggler sidenav-toggler-dark" data-action="sidenav-pin"
@@ -84,13 +89,8 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="nav-item d-sm-none">
-                            <a class="nav-link" href="#" data-action="search-show" data-target="#navbar-search-main">
-                                <i class="ni ni-zoom-split-in"></i>
-                            </a>
-                        </li>
                     </ul>
-                    <ul class="navbar-nav align-items-center  ml-auto ml-md-0 ">
+                    <ul class="navbar-nav align-items-center ml-auto ml-md-0 ">
                         <li class="nav-item dropdown">
                             <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">
@@ -98,12 +98,14 @@
                                     <span class="avatar bg-white avatar-sm rounded-circle">
                                         <img alt="Avatarku" src="/assets/images/default.png">
                                     </span>
-                                    <div class="media-body  ml-2  d-none d-lg-block">
-                                        <span class="mb-0 text-sm  font-weight-bold"><?= $data['pegawai']->nama ?></span>
+                                    <div class="media-body ml-2 d-none d-lg-block">
+                                        <span class="mb-0 text-sm font-weight-bold">
+                                            <?= $data['pegawai']->nama ?>
+                                        </span>
                                     </div>
                                 </div>
                             </a>
-                            <div class="dropdown-menu  dropdown-menu-right ">
+                            <div class="dropdown-menu dropdown-menu-right ">
                                 <div class="dropdown-header noti-title">
                                     <h6 class="text-overflow m-0">Welcome!</h6>
                                 </div>
@@ -139,8 +141,9 @@
             <footer class="footer pt-0">
                 <div class="row align-items-center justify-content-lg-between">
                     <div class="col-lg-6">
-                        <div class="copyright text-center  text-lg-left  text-muted">
-                            &copy; 2021 - <?= date("Y"); ?> <a href="https://pojokberbagi.id" class="font-weight-bold ml-1"
+                        <div class="copyright text-center text-lg-left text-muted">
+                            &copy; 2021 -
+                            <?= date("Y"); ?> <a href="https://pojokberbagi.id" class="font-weight-bold ml-1"
                                 target="_blank">Pojok Berbagi</a>
                         </div>
                     </div>
@@ -148,57 +151,58 @@
             </footer>
         </div>
     </div>
-     <!-- Modal -->
-     <?php if (Session::exists('success') || Session::exists('error')) { ?>
-        <div class="modal fade" id="notif-modal" tabindex="-1" role="dialog" aria-labelledby="notif-modal-label"
-            aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered <?= ((Session::exists('error')) ? 'modal-danger' : '') ?>" role="document">
-                <div class="modal-content <?= ((Session::exists('error')) ? 'bg-gradient-danger' : '') ?>">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Pesan</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <?php if (Session::exists('success')) { 
+    <!-- Modal -->
+    <?php if (Session::exists('success') || Session::exists('error')) { ?>
+    <div class="modal fade" id="notif-modal" tabindex="-1" role="dialog" aria-labelledby="notif-modal-label"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered <?= ((Session::exists('error')) ? 'modal-danger' : '') ?>"
+            role="document">
+            <div class="modal-content <?= ((Session::exists('error')) ? 'bg-gradient-danger' : '') ?>">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Pesan</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <?php if (Session::exists('success')) { 
                             echo Session::flash('success');
                         } else { 
                             echo Session::flash('error');
                         } ?>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-link  ml-auto" data-dismiss="modal">Tutup</button>
-                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-link ml-auto" data-dismiss="modal">Tutup</button>
                 </div>
             </div>
         </div>
-        <?php } elseif (Session::exists('notifikasi')) { 
+    </div>
+    <?php } elseif (Session::exists('notifikasi')) { 
                 $notifikasi = Session::get('notifikasi');
                 Session::delete('notifikasi');
             ?>
-            <div class="modal fade" id="notifikasi" tabindex="-1" role="dialog" aria-labelledby="notifikasi-label"
-            aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered <?= 'modal-' . $notifikasi['state'] ?>" role="document">
-                    <div class="modal-content <?= 'bg-gradient-' . $notifikasi['state'] ?>">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Pesan</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            <?= $notifikasi['pesan']; ?>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-link  ml-auto" data-dismiss="modal">Tutup</button>
-                        </div>
-                    </div>
+    <div class="modal fade" id="notifikasi" tabindex="-1" role="dialog" aria-labelledby="notifikasi-label"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered <?= 'modal-' . $notifikasi['state'] ?>" role="document">
+            <div class="modal-content <?= 'bg-gradient-' . $notifikasi['state'] ?>">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Pesan</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <?= $notifikasi['pesan']; ?>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-link ml-auto" data-dismiss="modal">Tutup</button>
                 </div>
             </div>
-        <?php } ?>
+        </div>
+    </div>
+    <?php } ?>
     <!-- Broken Img Handler -->
-    
+
     <!-- Vendor Script -->
     <script src="/vendors/jquery/dist/jquery.min.js"></script>
     <script src="/vendors/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
@@ -212,6 +216,6 @@
     <?= $this->getScript('action'); ?>
     <!-- Argon JS -->
     <script src="/assets/main/js/argon.js"></script>
-</body>
+    </body>
 
 </html>
