--- a/app/views/admin/bantuan/index.html
+++ b/app/views/admin/bantuan/index.html
@@ -6,11 +6,11 @@
                 <div class="row">
                     <div class="col">
                         <h5 class="card-title text-uppercase text-muted mb-0">Jumlah Bantuan</h5>
-                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= ($this->data['info-card']['jumlah_bantuan']) ?>">0</span>
+                        <span class="h2 font-weight-bold mb-0 counter-card"
+                            data-count-up-value="<?= ($this->data['info-card']['jumlah_bantuan']) ?>">0</span>
                     </div>
                     <div class="col-auto">
-                        <div
-                            class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
+                        <div class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
                             <i class="ni ni-bullet-list-67"></i>
                         </div>
                     </div>
@@ -29,11 +29,11 @@
                 <div class="row">
                     <div class="col">
                         <h5 class="card-title text-uppercase text-muted mb-0">Belum Disetujui</h5>
-                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= ($this->data['info-card']['jumlah_bantuan_menunggu']) ?>">0</span>
+                        <span class="h2 font-weight-bold mb-0 counter-card"
+                            data-count-up-value="<?= ($this->data['info-card']['jumlah_bantuan_menunggu']) ?>">0</span>
                     </div>
                     <div class="col-auto">
-                        <div
-                            class="icon icon-shape bg-gradient-orange text-white rounded-circle shadow">
+                        <div class="icon icon-shape bg-gradient-orange text-white rounded-circle shadow">
                             <i class="ni ni-books"></i>
                         </div>
                     </div>
@@ -52,11 +52,11 @@
                 <div class="row">
                     <div class="col">
                         <h5 class="card-title text-uppercase text-muted mb-0">Sedang Berjalan</h5>
-                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= ($this->data['info-card']['jumlah_bantuan_aktif']) ?>">0</span>
+                        <span class="h2 font-weight-bold mb-0 counter-card"
+                            data-count-up-value="<?= ($this->data['info-card']['jumlah_bantuan_aktif']) ?>">0</span>
                     </div>
                     <div class="col-auto">
-                        <div
-                            class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
+                        <div class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
                             <i class="ni ni-delivery-fast"></i>
                         </div>
                     </div>
@@ -75,11 +75,11 @@
                 <div class="row">
                     <div class="col">
                         <h5 class="card-title text-uppercase text-muted mb-0">Selesai Diberikan</h5>
-                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= ($this->data['info-card']['jumlah_bantuan_selesai']) ?>">0</span>
+                        <span class="h2 font-weight-bold mb-0 counter-card"
+                            data-count-up-value="<?= ($this->data['info-card']['jumlah_bantuan_selesai']) ?>">0</span>
                     </div>
                     <div class="col-auto">
-                        <div
-                            class="icon icon-shape bg-gradient-light text-white rounded-circle shadow">
+                        <div class="icon icon-shape bg-gradient-light text-white rounded-circle shadow">
                             <i class="ni ni-paper-diploma"></i>
                         </div>
                     </div>
@@ -124,7 +124,7 @@
                             foreach($data['bantuan'] as $data_bantuan) { 
                                 $blokir = Utility::blokirClassText($data_bantuan->blokir);
                                 $blokUnblock = Utility::blokUnblockClassText($data_bantuan->blokir);
-                                $status = Utility::statusBantuanClassText($data_bantuan->status);
+                                $status = Utility::statusBantuanClassTextBadge($data_bantuan->status);
                                 $sektorKategori = Utility::imploderArray(array($data_bantuan->nama_sektor, $data_bantuan->nama_kategori));
                             ?>
                         <tr>
@@ -132,61 +132,91 @@
                                 <div class="row align-items-center flex-row">
                                     <div class="col-8 font-weight-bolder overflow-hidden">
                                         <div class="media align-items-center">
-                                            <a href="#" data-id="<?= $data_bantuan->id_bantuan; ?>" class="d-flex flex-row">
-                                                <div class="name mb-0 text-sm"><?= $data_bantuan->id_bantuan; ?></div><div class="ml-1"<?= (isset($data_bantuan->warna) ? ' style="color: '. $data_bantuan->warna .'"' : ''); ?>><?= $data_bantuan->nama ?></div>
+                                            <a href="#" data-id="<?= $data_bantuan->id_bantuan; ?>"
+                                                class="d-flex flex-row">
+                                                <div class="name mb-0 text-sm">
+                                                    <?= $data_bantuan->id_bantuan; ?>
+                                                </div>
+                                                <div class="ml-1" <?=(isset($data_bantuan->warna) ? ' style="color: '.
+                                                    $data_bantuan->warna .'"' : ''); ?>>
+                                                    <?= $data_bantuan->nama ?>
+                                                </div>
                                             </a>
                                         </div>
-                                        <div class="text-black-50 small font-weight-bolder"><?= $data_bantuan->create_bantuan_at; ?></div>
+                                        <div class="text-black-50 small font-weight-bolder">
+                                            <?= $data_bantuan->create_bantuan_at; ?>
+                                        </div>
                                     </div>
                                     <div class="col justify-content-end d-flex">
                                         <div class="media align-items-center flex-column">
                                             <div class="badge badge-dot text-capitalize">
                                                 <i class="<?= $blokir['class']; ?> m-0"></i>
-                                                <span class="small"><?= $blokir['text']; ?></span>
+                                                <span class="small">
+                                                    <?= $blokir['text']; ?>
+                                                </span>
                                             </div>
-                                            <div class="badge px-2 text-capitalize<?= ' '. $status['class']; ?>"><?= $status['text']; ?></div>
+                                            <div class="badge px-2 text-capitalize<?= ' '. $status['class']; ?>">
+                                                <?= $status['text']; ?>
+                                            </div>
                                         </div>
+                                    </div>
+                                </div>
+                                </td>
+                            <td class="fit">
+                                <div class="d-flex flex-column">
+                                    <?= $data_bantuan->nama_penerima; ?>
+                                    <div class="text-muted small">
+                                        <?= $sektorKategori; ?>
                                     </div>
                                 </div>
                             </td>
                             <td class="fit">
-                                <div class="d-flex flex-column">
-                                    <?= $data_bantuan->nama_penerima; ?>
-                                    <div class="text-muted small"><?= $sektorKategori; ?></div>
-                                </div>
-                            </td>
-                            <td class="fit">
-                                <b><?= $data_bantuan->jumlah_target; ?></b>
+                                <b>
+                                    <?= $data_bantuan->jumlah_target; ?>
+                                </b>
                                 <?= (isset($data_bantuan->satuan_target) ? '<div class="text-muted">'. $data_bantuan->satuan_target .'</div>' : ''); ?>
                             </td>
                             <td>
                                 <div class="progress-wrapper" style="padding-top: 0px;">
                                     <div class="progress-info">
                                         <div class="progress-label">
-                                            <span class="py-2"><?= number_format($data_bantuan->jumlah_pelaksanaan,0,',','.') ?></span>
+                                            <span class="py-2">
+                                                <?= number_format($data_bantuan->jumlah_pelaksanaan,0,',','.') ?>
+                                            </span>
                                         </div>
                                         <div class="progress-percentage">
-                                            <span><?= $data_bantuan->persentase_pelaksanaan; ?>%</span>
+                                            <span>
+                                                <?= $data_bantuan->persentase_pelaksanaan; ?>%
+                                            </span>
                                         </div>
                                     </div>
                                     <div class="progress" style="width: 100%;">
-                                        <div class="progress-bar <?= Utility::setProgressClass($data_bantuan->persentase_pelaksanaan); ?>" role="progressbar"
+                                        <div class="progress-bar <?= Utility::setProgressClass($data_bantuan->persentase_pelaksanaan); ?>"
+                                            role="progressbar"
                                             aria-valuenow="<?= $data_bantuan->persentase_pelaksanaan; ?>"
-                                            aria-valuemin="0" aria-valuemax="100"
-                                            <?= 'style="width:'. $data_bantuan->persentase_pelaksanaan . '%"'?>></div>
+                                            aria-valuemin="0" aria-valuemax="100" <?='style="width:' . $data_bantuan->
+                                            persentase_pelaksanaan . '%"'?>></div>
                                     </div>
                                 </div>
                             </td>
                             <td>
                                 <div class="media align-item-center flex-column">
-                                    <b><?= $data_bantuan->donasi_terlaksana; ?></b>
-                                    <div class="small badge badge-primary text-black-50 text-capitalize"><?= $data_bantuan->sekian_kali_pencairan; ?> Pencairan</div>
+                                    <b>
+                                        <?= $data_bantuan->donasi_terlaksana; ?>
+                                    </b>
+                                    <div class="small badge badge-primary text-black-50 text-capitalize">
+                                        <?= $data_bantuan->sekian_kali_pencairan; ?> Pencairan
+                                    </div>
                                 </div>
                             </td>
                             <th>
                                 <div class="media align-item-center flex-column">
-                                    <b class="item"><?= $data_bantuan->total_donasi; ?></b>
-                                    <div class="badge badge-primary text-orange text-capitalize"><?= $data_bantuan->total_donatur; ?> Donatur</div>
+                                    <b class="item">
+                                        <?= $data_bantuan->total_donasi; ?>
+                                    </b>
+                                    <div class="badge badge-primary text-orange text-capitalize">
+                                        <?= $data_bantuan->total_donatur; ?> Donatur
+                                    </div>
                                 </div>
                             </th>
                             <td class="fit">
@@ -202,10 +232,13 @@
                                         <a class="dropdown-item"
                                             href="/admin/bantuan/data/<?= $data_bantuan->id_bantuan; ?>">Lihat Data</a>
                                         <?php if ($data_bantuan->status != 'S') { ?>
-                                            <a class="dropdown-item"
-                                            href="/admin/bantuan/formulir/<?= $data_bantuan->id_bantuan; ?>">Ubah Data</a>
-                                            <a class="dropdown-item font-weight-bold <?= ' '.$blokUnblock['class'];?>"
-                                            href="/admin/bantuan/blok/<?= $data_bantuan->id_bantuan; ?>"><?= $blokUnblock['text']; ?></a>
+                                        <a class="dropdown-item"
+                                            href="/admin/bantuan/formulir/<?= $data_bantuan->id_bantuan; ?>">Ubah
+                                            Data</a>
+                                        <a class="dropdown-item font-weight-bold <?= ' '.$blokUnblock['class'];?>"
+                                            href="/admin/bantuan/blok/<?= $data_bantuan->id_bantuan; ?>">
+                                            <?= $blokUnblock['text']; ?>
+                                        </a>
                                         <?php } ?>
                                         <?= ($data_bantuan->status == 'D' ? '<a class="dropdown-item font-weight-bold text-black-50 token-last-param" href="/admin/bantuan/tutup/' . $data_bantuan->id_bantuan .'/'. $this->data['token'] .'">Take Down</a>' : ''); ?>
                                     </div>
@@ -233,21 +266,25 @@
 <?php if (Session::exists('toast')) {
     $toast = Session::flash('toast');
     ?>
-    <div aria-live="polite" aria-atomic="true" style="bottom: 1em; right: 1em; z-index: 10;" class="position-fixed d-flex justify-content-end flex-column align-items-end">
-        <div class="toast w-100 fade hide bg-white" role="alert" aria-live="assertive" aria-atomic="true" data-toast="feedback" data-delay="5000" data-toast-run="true">
-            <div class="toast-header d-flex gap-x-2 justify-content-center align-items-center">
-                <div class="small-box rounded p-2 ailgn-items-center <?= ($toast['error'] == true ? 'bg-danger' : 'bg-success') ?>"></div>
-                <strong class="mr-auto">Pemberitahuan</strong>
-                <small class="text-muted time-passed">Beberapa saat yang lalu</small>
-                <button type="button" class="close" data-dismiss="toast" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+<div aria-live="polite" aria-atomic="true" style="bottom: 1em; right: 1em; z-index: 10;"
+    class="position-fixed d-flex justify-content-end flex-column align-items-end">
+    <div class="toast w-100 fade hide bg-white" role="alert" aria-live="assertive" aria-atomic="true"
+        data-toast="feedback" data-delay="5000" data-toast-run="true">
+        <div class="toast-header d-flex gap-x-2 justify-content-center align-items-center">
+            <div
+                class="small-box rounded p-2 ailgn-items-center <?= ($toast['error'] == true ? 'bg-danger' : 'bg-success') ?>">
             </div>
-            <div class="toast-body">
-                <?= $toast['feedback']['message']; ?>
-            </div>
+            <strong class="mr-auto">Pemberitahuan</strong>
+            <small class="text-muted time-passed">Beberapa saat yang lalu</small>
+            <button type="button" class="close" data-dismiss="toast" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body">
+            <?= $toast['feedback']['message']; ?>
         </div>
     </div>
-    <?php
+</div>
+<?php
 }
 ?>
