--- a/app/views/admin/donasi/index.html
+++ b/app/views/admin/donasi/index.html
@@ -6,7 +6,8 @@
                 <div class="row">
                     <div class="col">
                         <h5 class="card-title text-uppercase text-muted mb-0">Belum Terverivikasi</h5>
-                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= $data['countUpDonasi']->sum_belum_terverivikasi; ?>"></span>
+                        <span class="h2 font-weight-bold mb-0 counter-card"
+                            data-count-up-value="<?= $data['countUpDonasi']->sum_belum_terverivikasi; ?>"></span>
                     </div>
                     <div class="col-auto">
                         <div class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
@@ -24,7 +25,8 @@
                 <div class="row">
                     <div class="col">
                         <h5 class="card-title text-uppercase text-muted mb-0">Sudah Terverivikasi</h5>
-                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= $data['countUpDonasi']->sum_sudah_terverivikasi; ?>"></span>
+                        <span class="h2 font-weight-bold mb-0 counter-card"
+                            data-count-up-value="<?= $data['countUpDonasi']->sum_sudah_terverivikasi; ?>"></span>
                     </div>
                     <div class="col-auto">
                         <div class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
@@ -42,7 +44,8 @@
                 <div class="row">
                     <div class="col">
                         <h5 class="card-title text-uppercase text-muted mb-0">Total Donasi Masuk</h5>
-                        <span class="h2 font-weight-bold mb-0 counter-card" data-count-up-value="<?= $data['countUpDonasi']->count_donasi; ?>"></span>
+                        <span class="h2 font-weight-bold mb-0 counter-card"
+                            data-count-up-value="<?= $data['countUpDonasi']->count_donasi; ?>"></span>
                     </div>
                     <div class="col-auto">
                         <div class="icon icon-shape bg-gradient-blue text-white rounded-circle shadow">
@@ -61,10 +64,16 @@
                 <div>
                     Kelola
                     <span class="text-green">List Donasi</span>
-                </div>  
-                <div class="status" style="font-size: .5rem; right: 1.25rem;">
-                    <div class="font-weight-bold text-black-50">Menampilkan <span class="text-orange"><?= count($data['list_donasi']['data']); ?></span> dari</div>
-                    <div class="float-right badge badge-pill badge-primary"><span class="counter-card" data-count-up-value="<?= $data['list_donasi']['total_record']; ?>"></span> Donasi</div>
+                </div>
+                <div class="right-header d-flex">
+                    <a href="/admin/donasi/buat" class="btn btn-sm btn-outline-primary">Buat Donasi</a>
+                    <div class="status" style="font-size: .5rem; right: 1.25rem;">
+                        <div class="font-weight-bold text-black-50">Menampilkan <span class="text-orange">
+                                <?= count(is_countable($data['list_donasi']['data']) ? $data['list_donasi']['data'] : []); ?>
+                            </span> dari</div>
+                        <div class="float-right badge badge-pill badge-primary"><span class="counter-card"
+                                data-count-up-value="<?= $data['list_donasi']['total_record']; ?>"></span> Donasi</div>
+                    </div>
                 </div>
             </div>
             <div class="card-body p-0">
@@ -73,13 +82,13 @@
                         <tr>
                             <th class="font-weight-bold">Id Donasi</th>
                             <th class="font-weight-bold">Status</th>
-                            <th class="font-weight-bold">Nominal (Rp)</th>
-                            <th class="font-weight-bold">Aksi</th>
+                            <th class="font-weight-bold fit">Nominal (Rp)</th>
+                            <th class="font-weight-bold auto">Aksi</th>
                         </tr>
                     </thead>
                     <tbody<?= (isset($this->data['limit']) ? ' data-limit="'. $this->data['limit'] .'"' : '') ?>>
                         <?php 
-                            if (count($data['list_donasi']['data']) > 0) {
+                            if (count(is_countable($data['list_donasi']['data']) ? $data['list_donasi']['data'] : []) > 0) {
                                 foreach($data['list_donasi']['data'] as $listDonasi) {
                                     if ($listDonasi->bayar == '1') {
                                         $badge = 'badge-success';
@@ -91,34 +100,51 @@
                         ?>
                         <tr>
                             <td class="py-2">
-                                <a href="#" class="id-donasi text-primary font-weight-bolder"><?= $listDonasi->id_donasi; ?></a><span class="font-weight-bolder"<?= (!empty($listDonasi->warna) ? ' style="color: ' . $listDonasi->warna . '"' : '') ?>> <?= $listDonasi->nama_bantuan; ?></span><?= (!empty($listDonasi->nama_sektor) ? '<span class="text-muted"> (' . $listDonasi->nama_sektor . ')</span>' : ''); ?>
-                                <div class="time small text-black-50 font-weight-bolder"><?= $listDonasi->create_donasi_at; ?></div>
+                                <a href="#" class="id-donasi text-primary font-weight-bolder">
+                                    <?= $listDonasi->id_donasi; ?>
+                                </a><span class="font-weight-bolder" <?=(!empty($listDonasi->warna) ? ' style="color: '
+                                    . $listDonasi->warna . '"' : '') ?>>
+                                    <?= $listDonasi->nama_bantuan; ?>
+                                </span>
+                                <?= (!empty($listDonasi->nama_sektor) ? '<span class="text-muted"> (' . $listDonasi->nama_sektor . ')</span>' : ''); ?>
+                                <div class="time small text-black-50 font-weight-bolder">
+                                    <?= $listDonasi->create_donasi_at; ?>
+                                </div>
                             </td>
                             <td class="py-2">
-                                <span class="badge <?= $badge; ?>"><?= $verivikasi; ?></span>
+                                <span class="badge <?= $badge; ?>">
+                                    <?= $verivikasi; ?>
+                                </span>
                                 <?= (!empty($listDonasi->waktu_bayar) ? '<div class="small text-black-50 font-weight-bolder">' . $listDonasi->waktu_bayar . '</div>' : ''); ?>
                             </td>
                             <td class="py-2">
                                 <div class="media align-items-center">
                                     <div class="media-body">
-                                        <div class="name mb-0 text-black-50 font-weight-bold"><?= Output::tSparator($listDonasi->jumlah_donasi); ?></div>
-                                        <div class="small text-black-50 font-weight-bolder"><?= Utility::keteranganJenisChannelPayment($listDonasi->jenis_cp); ?></div>
+                                        <div class="name mb-0 text-black-50 font-weight-bold">
+                                            <?= $listDonasi->jumlah_donasi; ?>
+                                        </div>
+                                        <div class="small text-black-50 font-weight-bolder">
+                                            <?= Utility::keteranganJenisChannelPayment($listDonasi->jenis_cp); ?>
+                                        </div>
                                     </div>
-                                    <div class="avatar rounded ml-3 bg-transparent border" data-id-donatur="<?= $listDonasi->id_donatur; ?>">
-                                        <img src="<?= $listDonasi->path_gambar_cp; ?>" alt="<?= $listDonasi->nama_path_gambar_cp; ?>" class="img-fluid">
+                                    <div class="avatar rounded ml-3 bg-transparent border"
+                                        data-id-donatur="<?= $listDonasi->id_donatur; ?>">
+                                        <img src="<?= $listDonasi->path_gambar_cp; ?>"
+                                            alt="<?= $listDonasi->nama_path_gambar_cp; ?>" class="img-fluid">
                                     </div>
                                 </div>
                             </td>
                             <td class="text-right auto">
                                 <div class="dropdown show">
-                                    <a class="btn btn-sm btn-icon-only text-light" href="#"
-                                        role="button" data-toggle="dropdown" aria-haspopup="true"
-                                        aria-expanded="true">
+                                    <a class="btn btn-sm btn-icon-only text-light" href="#" role="button"
+                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                                         <i class="fas fa-ellipsis-v"></i>
                                     </a>
                                     <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow"
                                         x-placement="top-end">
-                                        <a class="dropdown-item" href="/admin/bantuan/data/<?= $listDonasi->id_bantuan; ?>">Lihat Program Donasi</a>
+                                        <a class="dropdown-item"
+                                            href="/admin/bantuan/data/<?= $listDonasi->id_bantuan; ?>">Lihat Program
+                                            Donasi</a>
                                         <!-- <a class="dropdown-item" href="#">Lihat Data Donatur</a> -->
                                         <!-- <a class="dropdown-item<?= ($listDonasi->bayar == '1' ? ' disabled">Sudah Terverivikasi' : ' text-warning font-weight-bold" href="#">Verivikasi'); ?></a> -->
                                     </div>
@@ -131,26 +157,28 @@
                             
                             }
                         ?>
-                    </tbody>
-                    <tfoot>
-                        <tr>
-                            <th class="font-weight-bold">Id Donasi</th>
-                            <th class="font-weight-bold">Status</th>
-                            <th class="font-weight-bold">Nominal (Rp)</th>
-                            <th class="font-weight-bold">Aksi</th>
-                        </tr>
-                    </tfoot>
+                        </tbody>
+                        <tfoot>
+                            <tr>
+                                <th class="font-weight-bold">Id Donasi</th>
+                                <th class="font-weight-bold">Status</th>
+                                <th class="font-weight-bold">Nominal (Rp)</th>
+                                <th class="font-weight-bold">Aksi</th>
+                            </tr>
+                        </tfoot>
                 </table>
             </div>
             <div class="card-footer">
                 <div class="row align-items-center">
                     <div class="col">
                         <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Cari.." name="search" autocomplete="off">
+                            <input type="text" class="form-control" placeholder="Cari.." name="search"
+                                autocomplete="off">
                         </div>
                     </div>
                     <div class="col">
-                        <ul class="pagination pagination-sm justify-content-end mb-0" data-pages="<?= $this->data['pages']; ?>">
+                        <ul class="pagination pagination-sm justify-content-end mb-0"
+                            data-pages="<?= $this->data['pages']; ?>">
                         </ul>
                     </div>
                 </div>
@@ -159,13 +187,16 @@
     </div>
     <div class="col-12 col-xl-4">
         <div class="row px-3">
-            <div class="col-12 col-md-6 card p-0 bg-gradient-gray overflow-hidden text-white d-flex align-items-center" data-cp="bank-bjb">
+            <div class="col-12 col-md-6 card p-0 bg-gradient-gray overflow-hidden text-white d-flex align-items-center"
+                data-cp="bank-bjb">
                 <img src="/assets/images/partners/gunung-gunungan.png" alt="Gunung-gunungan" class="py-3">
                 <div class="card-body p-3 d-flex flex-column justify-content-between w-100">
                     <div class="row g-0">
                         <div class="col saldo">
                             <small class="text-white-50 font-weight-bolder">Saldo Donasi Via BJB</small>
-                            <div><?= Output::tSparator($data['saldo_donasi']->saldo_bjb); ?></div>
+                            <div>
+                                <?= Output::tSparator($data['saldo_donasi']->saldo_bjb); ?>
+                            </div>
                         </div>
                         <div class="col-3 logo-cp">
                             <img src="/assets/images/partners/bjb-white.png" alt="BJB" class="img-fluid img-center">
@@ -175,7 +206,9 @@
                         <div class="col">
                             <h6 class="text-white m-0">
                                 <div>POJOK BERBAGI INDONESIA</div>
-                                <div class="font-weight-300"><?= $data['saldo_donasi']->nomor_bjb; ?></div>
+                                <div class="font-weight-300">
+                                    <?= $data['saldo_donasi']->nomor_bjb; ?>
+                                </div>
                             </h6>
                         </div>
                         <div class="col-3">
@@ -189,7 +222,9 @@
                     <div class="row g-0">
                         <div class="col saldo">
                             <small class="text-white-50 font-weight-bolder">Saldo Donasi Via BSI</small>
-                            <div><?= Output::tSparator($data['saldo_donasi']->saldo_bsi); ?></div>
+                            <div>
+                                <?= Output::tSparator($data['saldo_donasi']->saldo_bsi); ?>
+                            </div>
                         </div>
                         <div class="col-3 logo-cp">
                             <img src="/assets/images/partners/bsi-white.png" alt="BSI" class="img-fluid img-center">
@@ -199,7 +234,9 @@
                         <div class="col">
                             <h6 class="text-white m-0">
                                 <div>POJOK BERBAGI INDONESIA</div>
-                                <div class="font-weight-300"><?= $data['saldo_donasi']->nomor_bsi; ?></div>
+                                <div class="font-weight-300">
+                                    <?= $data['saldo_donasi']->nomor_bsi; ?>
+                                </div>
                             </h6>
                         </div>
                         <div class="col-3">
@@ -215,7 +252,9 @@
                     <div class="row g-0">
                         <div class="col saldo">
                             <small class="text-white-50 font-weight-bolder">Saldo Donasi Via BRI</small>
-                            <div><?= Output::tSparator($data['saldo_donasi']->saldo_bri); ?></div>
+                            <div>
+                                <?= Output::tSparator($data['saldo_donasi']->saldo_bri); ?>
+                            </div>
                         </div>
                         <div class="col-3 logo-cp">
                             <img src="/assets/images/partners/bri-white.png" alt="BRI" class="img-fluid img-center">
@@ -225,7 +264,9 @@
                         <div class="col">
                             <h6 class="text-white m-0">
                                 <div>POJOK BERBAGI INDONESIA</div>
-                                <div class="font-weight-300"><?= $data['saldo_donasi']->nomor_bri; ?></div>
+                                <div class="font-weight-300">
+                                    <?= $data['saldo_donasi']->nomor_bri; ?>
+                                </div>
                             </h6>
                         </div>
                         <div class="col-3">
@@ -239,7 +280,9 @@
                     <div class="row g-0">
                         <div class="col saldo">
                             <small class="text-black-50 font-weight-bolder">Saldo Donasi Tunai</small>
-                            <div><?= Output::tSparator($data['saldo_donasi']->saldo_tunai); ?></div>
+                            <div>
+                                <?= Output::tSparator($data['saldo_donasi']->saldo_tunai); ?>
+                            </div>
                         </div>
                         <div class="col-3 logo-cp">
                             <img src="/assets/images/partners/tunai.png" alt="Tunai" class="img-fluid img-center">
@@ -249,11 +292,14 @@
                         <div class="col">
                             <h6 class="m-0">
                                 <div>KANTOR POJOK BERBAGI</div>
-                                <div class="font-weight-300"><?= $data['saldo_donasi']->nomor_tunai; ?></div>
+                                <div class="font-weight-300">
+                                    <?= $data['saldo_donasi']->nomor_tunai; ?>
+                                </div>
                             </h6>
                         </div>
                         <div class="col-3">
-                            <img src="/assets/images/brand/pojok-berbagi-transparent.png" alt="Pojok Berbagi" class="img-fluid img-center">
+                            <img src="/assets/images/brand/pojok-berbagi-transparent.png" alt="Pojok Berbagi"
+                                class="img-fluid img-center">
                         </div>
                     </div>
                 </div>
