--- a/app/views/auth.html
+++ b/app/views/auth.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><?= $this->getTitle() . Config::get('defaults/default_title') ?></title>
+    <title>
+        <?= $this->getTitle() . Config::get('defaults/default_title') ?>
+    </title>
     <link rel="shortcut icon" href="/assets/images/brand/favicon-pojok-icon.ico" type="image/x-icon">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
@@ -20,7 +22,7 @@
     <?= $this->getLinkRel('action'); ?>
 </head>
 
-<body class="bg-default" <?= (isset($this->data['uri']) ? 'data-uri="'. $this->data['uri'] .'"' : '') ?>>
+<body class="bg-default" <?=(isset($this->data['uri']) ? 'data-uri="'. $this->data['uri'] .'"' : '') ?>>
     <!-- Navbar -->
     <nav id="navbar-main" class="navbar navbar-horizontal navbar-transparent navbar-main navbar-expand-lg navbar-light">
         <div class="container">
