--- a/app/views/auth/signin/index.html
+++ b/app/views/auth/signin/index.html
@@ -1,74 +1,85 @@
-    <!-- Main content -->
-    <div class="main-content">
-        <!-- Header -->
-        <div class="header bg-gradient-green py-7 py-lg-8 pt-lg-9">
-            <div class="container">
-                <div class="header-body text-center mb-7">
-                    <div class="row justify-content-center">
-                        <div class="col-xl-5 col-lg-6 col-md-8 px-5">
-                            <h1 class="text-white">Selamat Datang!</h1>
-                            <p class="text-lead text-white">Masuk sekarang untuk kelola akunmu.</p>
-                        </div>
+<!-- Main content -->
+<div class="main-content">
+    <!-- Header -->
+    <div class="header bg-gradient-green py-7 py-lg-8 pt-lg-9">
+        <div class="container">
+            <div class="header-body text-center mb-7">
+                <div class="row justify-content-center">
+                    <div class="col-xl-5 col-lg-6 col-md-8 px-5">
+                        <h1 class="text-white">Selamat Datang!</h1>
+                        <p class="text-lead text-white">Masuk sekarang untuk kelola akunmu.</p>
                     </div>
                 </div>
             </div>
-            <div class="separator separator-bottom separator-skew zindex-100">
-                <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <polygon class="fill-default" points="2560 0 2560 100 0 100"></polygon>
-                </svg>
-            </div>
         </div>
-        <!-- Page content -->
-        <div class="container mt--8 pb-5">
-            <div class="row justify-content-center">
-                <div class="col-lg-5 col-md-7">
-                    <div class="card bg-secondary border-0 mb-0">
-                        <div class="card-body px-lg-5 py-lg-5">
-                            <div class="text-center text-muted mb-4">
-                                <small>Masuk Sebagai</small>
+        <div class="separator separator-bottom separator-skew zindex-100">
+            <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1"
+                xmlns="http://www.w3.org/2000/svg">
+                <polygon class="fill-default" points="2560 0 2560 100 0 100"></polygon>
+            </svg>
+        </div>
+    </div>
+    <!-- Page content -->
+    <div class="container mt--8 pb-5">
+        <div class="row justify-content-center">
+            <div class="col-lg-5 col-md-7">
+                <div class="card bg-secondary border-0 mb-0">
+                    <div class="card-body px-lg-5 py-lg-5">
+                        <div class="text-center text-muted mb-4">
+                            <small>Masuk Sebagai</small>
+                        </div>
+                        <form role="form" action="/auth/signin" method="POST" autocomplete="off">
+                            <div class="form-group mb-3">
+                                <div class="input-group input-group-merge input-group-alternative">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="ni ni-email-83"></i></span>
+                                    </div>
+                                    <input class="form-control" placeholder="Email atau Username" type="text"
+                                        name="email_username"
+                                        value="<?= isset($this->data['email_usernameV']) ? $this->data['email_usernameV'] : ''; ?>">
+                                    <div
+                                        class="<?= 'invalid-feedback px-2 py-1 font-weight-bold ' . (!empty($this->data['email_usernameF']) ? 'd-block' : '') ?>">
+                                        <?= (!empty($this->data['email_usernameF']) ? $this->data['email_usernameF'] : '') ?>
+                                    </div>
+                                </div>
                             </div>
-                            <form role="form" action="/auth/signin" method="POST" autocomplete="off">
-                                <div class="form-group mb-3">
-                                    <div class="input-group input-group-merge input-group-alternative">
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text"><i class="ni ni-email-83"></i></span>
-                                        </div>
-                                        <input class="form-control" placeholder="Email atau Username" type="text" name="email_username" value="<?= isset($this->data['email_usernameV']) ? $this->data['email_usernameV'] : ''; ?>">
-                                        <div class="<?= 'invalid-feedback px-2 py-1 font-weight-bold ' . (!empty($this->data['email_usernameF']) ? 'd-block' : '') ?>"><?= (!empty($this->data['email_usernameF']) ? $this->data['email_usernameF'] : '') ?></div>
+                            <div class="form-group">
+                                <div class="input-group input-group-merge input-group-alternative">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
+                                    </div>
+                                    <input class="form-control no-space" placeholder="Password" type="password"
+                                        name="password"
+                                        value="<?= isset($this->data['passwordV']) ? $this->data['passwordV'] : ''; ?>">
+                                    <div
+                                        class="<?= 'invalid-feedback px-2 py-1 font-weight-bold ' . (!empty($this->data['passwordF']) ? 'd-block' : '') ?>">
+                                        <?= (!empty($this->data['passwordF']) ? $this->data['passwordF'] : '') ?>
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <div class="input-group input-group-merge input-group-alternative">
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
-                                        </div>
-                                        <input class="form-control no-space" placeholder="Password" type="password" name="password" value="<?= isset($this->data['passwordV']) ? $this->data['passwordV'] : ''; ?>">
-                                        <div class="<?= 'invalid-feedback px-2 py-1 font-weight-bold ' . (!empty($this->data['passwordF']) ? 'd-block' : '') ?>"><?= (!empty($this->data['passwordF']) ? $this->data['passwordF'] : '') ?></div>
-                                    </div>
-                                </div>
-                                <div class="custom-control custom-control-alternative custom-checkbox">
-                                    <input class="custom-control-input" id=" customCheckLogin" type="checkbox" name="remember_me" <?= !empty($this->data['remember_meV']) ? 'checked' : ''; ?>>
-                                    <label class="custom-control-label orange" for=" customCheckLogin">
-                                        <span class="text-muted">Remember me</span>
-                                    </label>
-                                </div>
-                                <input type="hidden" class="d-hidden" name="token" value="<?= $data['token']; ?>">
-                                <div class="text-center">
-                                    <button type="submit" class="btn btn-outline-warning my-4">Sign in</button>
-                                </div>
-                            </form>
-                        </div>
+                            </div>
+                            <div class="custom-control custom-control-alternative custom-checkbox">
+                                <input class="custom-control-input" id=" customCheckLogin" type="checkbox"
+                                    name="remember_me" <?=!empty($this->data['remember_meV']) ? 'checked' : ''; ?>>
+                                <label class="custom-control-label orange" for=" customCheckLogin">
+                                    <span class="text-muted">Remember me</span>
+                                </label>
+                            </div>
+                            <input type="hidden" class="d-hidden" name="token" value="<?= $data['token']; ?>">
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-outline-warning my-4">Sign in</button>
+                            </div>
+                        </form>
                     </div>
-                    <div class="row mt-3">
-                        <div class="col-6">
-                            <a href="/auth/reset" class="text-light"><small>Lupa passwordnya?</small></a>
-                        </div>
-                        <div class="col-6 text-right">
-                            <a href="/auth/signup" class="text-light"><small>Buat akun baru</small></a>
-                        </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-6">
+                        <a href="/auth/reset" class="text-light"><small>Lupa passwordnya?</small></a>
+                    </div>
+                    <div class="col-6 text-right">
+                        <a href="/auth/signup" class="text-light"><small>Buat akun baru</small></a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
