--- a/app/views/default/bantuan/kategori.html
+++ b/app/views/default/bantuan/kategori.html
@@ -1,7 +1,10 @@
 <!-- Kategori Area -->
-<section class="kategori-area section pb-0" <?= 'style="--kategori-color: ' . (isset($data['resume_kb']->warna) ? $data['resume_kb']->warna : 'var(--bs-light)') .'"' ?>>
+<section class="kategori-area section pb-0" <?='style="--kategori-color: ' . (isset($data['resume_kb']->warna) ?
+    $data['resume_kb']->warna : 'var(--bs-light)') .'"' ?>>
     <div class="section-title my-3">
-        <h2 class="border-2 rounded-pill d-inline-block border-solid"><?= (isset($data['resume_kb']->nama_kategori) ? $data['resume_kb']->nama_kategori : '(>_<) Pojok Tanpa Judul') ?></h3>
+        <h2 class="border-2 rounded-pill d-inline-block border-solid">
+            <?= (isset($data['resume_kb']->nama_kategori) ? $data['resume_kb']->nama_kategori : '(>_<) Pojok Tanpa Judul') ?>
+            </h3>
     </div>
     <div class="app-image bg-image bg-color d-flex justify-content-center align-items-center">
         <div class="container">
@@ -26,15 +29,21 @@
                 <div class="row">
                     <div class="col">
                         <h5 class="text-black-50 fw-bold">Dibuka</h5>
-                        <p class="text-muted" data-count-up-value="<?= (isset($data['resume_kb']->jumlah_bantuan_dibuka) ? $data['resume_kb']->jumlah_bantuan_dibuka : '0') ?>"></p>
+                        <p class="text-muted"
+                            data-count-up-value="<?= (isset($data['resume_kb']->jumlah_bantuan_dibuka) ? $data['resume_kb']->jumlah_bantuan_dibuka : '0') ?>">
+                        </p>
                     </div>
                     <div class="col">
                         <h5 class="text-dark fw-bold">Berjalan</h5>
-                        <p class="text-muted" data-count-up-value="<?= (isset($data['resume_kb']->jumlah_bantuan_berjalan) ? $data['resume_kb']->jumlah_bantuan_berjalan : '0') ?>"></p>
+                        <p class="text-muted"
+                            data-count-up-value="<?= (isset($data['resume_kb']->jumlah_bantuan_berjalan) ? $data['resume_kb']->jumlah_bantuan_berjalan : '0') ?>">
+                        </p>
                     </div>
                     <div class="col">
                         <h5 class="text-black-50 fw-bold">Selesai</h5>
-                        <p class="text-muted" data-count-up-value="<?= (isset($data['resume_kb']->jumlah_bantuan_selesai) ? $data['resume_kb']->jumlah_bantuan_selesai : '0') ?>"></p>
+                        <p class="text-muted"
+                            data-count-up-value="<?= (isset($data['resume_kb']->jumlah_bantuan_selesai) ? $data['resume_kb']->jumlah_bantuan_selesai : '0') ?>">
+                        </p>
                     </div>
                 </div>
             </div>
@@ -44,54 +53,87 @@
 <!-- Service Kategori -->
 <section class="services section">
     <div class="container">
-        <div class="row">
+        <?php $delay_card = 0.2; ?>
+        <div class="row" id="list-kategori-row" data-delay="<?= $delay_card; ?>" <?=(isset($data['list_id'])
+            ? ' data-list-id="' . $data['list_id'] . '"' : '' );?>>
             <?php 
-            if (!is_null($data['list_bantuan'])) {
-                $delay_card = 0.2;
-                $time_card = 0.2;
-                foreach($data['list_bantuan'] as $list_bantuan) { 
-                    $delay_card = $delay_card + $time_card; 
-            ?>
-                    <div class="col-lg-4 col-md-6 col-12 wow fadeInUp" data-wow-delay="<?= $delay_card.'s'; ?>">
-                        <!-- Start Single Service -->
-                        <div class="p-4 single-service animation">
-                            <div class="app-image img-wrapper rounded-box top overflow-hidden d-flex justify-content-center align-items-center position-relative mb-3">
-                                <img src="<?= $list_bantuan->path_gambar_medium; ?>" alt="<?= $list_bantuan->nama_gambar_medium; ?>" class="img-fluid opacity" data-animation-name="zoom-in">
-                                <div class="service-logo shadow bg-white d-flex justify-content-center align-items-center p-2 position-absolute top right margin-right" data-animation-name="slide">
-                                    <img src="<?= $list_bantuan->path_gambar_pengaju; ?>" alt="<?= $list_bantuan->pengaju_bantuan; ?>">
-                                </div>
-                                <div class="service-icon shadow d-flex justify-content-center align-items-center position-absolute bottom left" data-animation-name="slide" data-animation-start="backward" <?= (isset($list_bantuan->warna) ? 'style="background-color:' . $list_bantuan->warna .'"' : '') ?>>
-                                    <?= Utility::iconSektor($list_bantuan->layanan); ?>
-                                </div>
-                            </div>
-                            <h6 class="my-3 overflow-hidden title"><?= $list_bantuan->nama_bantuan ?></h6>
-                            <div class="row mb-2 align-items-end">
-                                <div class="col">
-                                    <h6>Terkumpul</h6>
-                                    <p class="text-muted">Rp. <?= Output::tSparator($list_bantuan->total_donasi); ?></p>
-                                </div>
-                                <div class="col-auto text-end">
-                                    <small>
-                                        <?= ($list_bantuan->sisa_waktu != 'Unlimited' ? $list_bantuan->sisa_waktu.' hari lagi' : $list_bantuan->sisa_waktu) ?>
-                                    </small>
-                                </div>
-                            </div>
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="<?= $list_bantuan->persentase_donasi_dilaksanakan; ?>" <?= 'style="width: '. $list_bantuan->persentase_donasi_dilaksanakan .'%"'; ?>></div>
-                            </div>
-                            <a href="<?= '/bantuan/detil/'. $list_bantuan->id_bantuan; ?>" class="mt-3" <?= (isset($list_bantuan->warna) ? 'style="color:' . $list_bantuan->warna .'"' : '') ?>>Lihat lebih lanjut <i class="lni lni-arrow-right"></i></a>
+            if (!is_null($data['list_bantuan'])) { $time_card=0.2; foreach($data['list_bantuan']['data'] as
+            $list_bantuan) { $delay_card=$delay_card + $time_card; ?>
+            <div class="col-lg-4 col-md-6 col-12 wow fadeInUp" data-wow-delay="<?= $delay_card.'s'; ?>">
+                <!-- Start Single Service -->
+                <div class="p-4 single-service animation">
+                    <div
+                        class="app-image img-wrapper rounded-box top overflow-hidden d-flex justify-content-center align-items-center position-relative mb-3">
+                        <img src="<?= $list_bantuan->path_gambar_medium; ?>"
+                            alt="<?= $list_bantuan->nama_gambar_medium; ?>" class="img-fluid opacity"
+                            data-animation-name="zoom-in">
+                        <div class="service-logo shadow bg-white d-flex justify-content-center align-items-center p-2 position-absolute top right margin-right"
+                            data-animation-name="slide">
+                            <img src="<?= $list_bantuan->path_gambar_pengaju; ?>"
+                                alt="<?= $list_bantuan->pengaju_bantuan; ?>">
                         </div>
-                        <!-- End Single Service -->
+                        <div class="service-icon shadow d-flex justify-content-center align-items-center position-absolute bottom left"
+                            data-animation-name="slide" data-animation-start="backward" <?=(isset($list_bantuan->warna)
+                            ? 'style="background-color:' . $list_bantuan->warna .'"' : '') ?>>
+                            <?= Utility::iconSektor($list_bantuan->layanan); ?>
+                        </div>
                     </div>
+                    <h6 class="my-3 overflow-hidden title">
+                        <?= $list_bantuan->nama_bantuan ?>
+                    </h6>
+                    <div class="row mb-2 align-items-end">
+                        <div class="col">
+                            <h6>Terkumpul</h6>
+                            <p class="text-muted">Rp.
+                                <?= Output::tSparator($list_bantuan->total_donasi); ?>
+                            </p>
+                        </div>
+                        <div class="col-auto text-end">
+                            <small>
+                                <?= ($list_bantuan->sisa_waktu != 'Unlimited' ? $list_bantuan->sisa_waktu.' hari lagi' : $list_bantuan->sisa_waktu) ?>
+                            </small>
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"
+                            aria-valuenow="<?= $list_bantuan->persentase_donasi_dilaksanakan; ?>" <?='style="width: ' .
+                            $list_bantuan->persentase_donasi_dilaksanakan .'%"'; ?>></div>
+                    </div>
+                    <a href="<?= '/bantuan/detil/'. $list_bantuan->id_bantuan; ?>" class="mt-3"
+                        <?=(isset($list_bantuan->warna) ? 'style="color:' . $list_bantuan->warna .'"' : '') ?>>Lihat
+                        lebih lanjut <i class="lni lni-arrow-right"></i></a>
+                </div>
+                <!-- End Single Service -->
+            </div>
             <?php }} else { ?>
-                    <div class="col-12 col-md-8 mx-auto">
-                        <center>
-                            <h5 class="text-black-50">Opps, Belum ada program bantuan <b><?= (isset($data['resume_kb']->nama_kategori) ? $data['resume_kb']->nama_kategori : 'Pojok Tanpa Judul') ?></b> yang <?= ($data['resume_kb']->jumlah_bantuan_dibuka == 0 ? 'ditambahkan' : 'dibuka terkini') ?>.</h5>
-                            <object data="/assets/svg/empty.svg" width="250" height="250"> </object>
-                        </center>
-                    </div>
+            <div class="col-12 col-md-8 mx-auto">
+                <center>
+                    <h5 class="text-black-50">Opps, Belum ada program bantuan <b>
+                            <?= (isset($data['resume_kb']->nama_kategori) ? $data['resume_kb']->nama_kategori : 'Pojok Tanpa Judul') ?>
+                        </b> yang
+                        <?= ($data['resume_kb']->jumlah_bantuan_dibuka == 0 ? 'ditambahkan' : 'dibuka terkini') ?>.
+                    </h5>
+                    <object data="/assets/svg/empty.svg" width="250" height="250"> </object>
+                </center>
+            </div>
             <?php } ?>
         </div>
+        <?php 
+            if (!is_null($data['list_bantuan'])) {
+                if ($data['list_bantuan']['load_more'] == 'true') {
+                    $delay_card = $delay_card + $time_card; 
+                ?>
+        <div class="row mt-5">
+            <div class="col-12 text-center wow fadeInUp" data-wow-delay="<?= $delay_card.'s'; ?>">
+                <a href="javascript:;" class="btn btn-outline-orange rounded-box py-2 px-4" id="load-more"
+                    data-offset="<?= $data['list_bantuan']['offset']; ?>"
+                    data-limit="<?= $data['list_bantuan']['limit']; ?>">Load More</a>
+            </div>
+        </div>
+        <?php
+                }
+            }
+        ?>
     </div>
 </section>
 <!-- Akhir Service Kategori -->
