--- a/app/views/donatur.html
+++ b/app/views/donatur.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><?= $this->getTitle() . Config::get('defaults/default_title') ?></title>
+    <title>
+        <?= $this->getTitle() . Config::get('defaults/default_title') ?>
+    </title>
     <link rel="shortcut icon" href="/assets/images/brand/favicon-pojok-icon.ico" type="image/x-icon">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
@@ -21,7 +23,8 @@
     <?= $this->getLinkRel('action'); ?>
 </head>
 
-<body <?= (isset($this->data['uri']) ? 'data-uri="'. $this->data['uri'] .'"' : '') ?> <?= (isset($this->data[Config::get('session/token_name')]) ? 'data-token="'. $this->data[Config::get('session/token_name')] .'"' : '') ?>>
+<body<?= (isset($this->data['uri']) ? ' data-uri="'. $this->data['uri'] .'"' : '') ?>
+    <?= (isset($this->data[Config::get('session/token_name')]) ? ' data-token="'. $this->data[Config::get('session/token_name')] .'"' : '') ?>>
     <!-- Sidenav -->
     <nav class="sidenav navbar navbar-vertical  fixed-left  navbar-expand-xs navbar-light bg-white" id="sidenav-main">
         <div class="scrollbar-inner">
@@ -48,7 +51,8 @@
                     <!-- Navigation -->
                     <ul class="navbar-nav mb-md-3">
                         <li class="nav-item">
-                            <a class="nav-link <?= ($this->getController() == 'profile' ? 'active' : '') ?>" href="/donatur/profile">
+                            <a class="nav-link <?= ($this->getController() == 'profile' ? 'active' : '') ?>"
+                                href="/donatur/profile">
                                 <i class="ni ni-single-02 text-yellow"></i>
                                 <span class="nav-link-text">Profile</span>
                             </a>
@@ -98,7 +102,9 @@
                                         <img alt="Avatarku" src="/assets/images/default.png">
                                     </span>
                                     <div class="media-body  ml-2  d-none d-lg-block">
-                                        <span class="mb-0 text-sm  font-weight-bold"><?= ucwords(strtolower($data['donatur']->nama)) ?></span>
+                                        <span class="mb-0 text-sm  font-weight-bold">
+                                            <?= ucwords(strtolower($data['donatur']->nama)) ?>
+                                        </span>
                                     </div>
                                 </div>
                             </a>
@@ -147,34 +153,35 @@
             </footer>
         </div>
     </div>
-     <!-- Modal -->
-     <?php if (Session::exists('success') || Session::exists('error')) { ?>
-        <div class="modal fade" id="notif-modal" tabindex="-1" role="dialog" aria-labelledby="notif-modal-label"
-            aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered <?= ((Session::exists('error')) ? 'modal-danger' : '') ?>" role="document">
-                <div class="modal-content <?= ((Session::exists('error')) ? 'bg-gradient-danger' : '') ?>">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Pesan</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <?php if (Session::exists('success')) { 
+    <!-- Modal -->
+    <?php if (Session::exists('success') || Session::exists('error')) { ?>
+    <div class="modal fade" id="notif-modal" tabindex="-1" role="dialog" aria-labelledby="notif-modal-label"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered <?= ((Session::exists('error')) ? 'modal-danger' : '') ?>"
+            role="document">
+            <div class="modal-content <?= ((Session::exists('error')) ? 'bg-gradient-danger' : '') ?>">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Pesan</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <?php if (Session::exists('success')) { 
                             echo Session::flash('success');
                         } else { 
                             echo Session::flash('error');
                         } ?>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-link  ml-auto" data-dismiss="modal">Tutup</button>
-                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-link  ml-auto" data-dismiss="modal">Tutup</button>
                 </div>
             </div>
         </div>
-        <?php } ?>
+    </div>
+    <?php } ?>
     <!-- Broken Img Handler -->
-    
+
     <!-- Vendor Script -->
     <script src="/vendors/jquery/dist/jquery.min.js"></script>
     <script src="/vendors/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
@@ -188,6 +195,6 @@
     <?= $this->getScript('action'); ?>
     <!-- Argon JS -->
     <script src="/assets/main/js/argon.js"></script>
-</body>
+    </body>
 
 </html>
