--- a/public/assets/pojok-berbagi-style.css
+++ b/public/assets/pojok-berbagi-style.css
@@ -124,6 +124,41 @@ h6 {
     padding: 1em;
 }
 
+/* Handling style for broken img */
+
+img {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+}
+
+img::before {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: hsl(0, 0%, 93.3%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+img::after {
+    position: absolute;
+    content: attr(alt);
+    left: 0px;
+    top: 0px;
+    height: 100%;
+    width: 100%;
+    font-weight: bold;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 /* Akhir Utilitas, Reset & Root */
 
 /* Form */
@@ -185,6 +220,11 @@ textarea {
 }
 
 /* Akhir Form */
+
+/* Modal */
+.modal .close span[aria-hidden] {
+    line-height: 1;
+}
 
 /* Footer */
 .kontak a.medsos-icon i {
