--- a/public/assets/route/admin/core/css/form-element.css
+++ b/public/assets/route/admin/core/css/form-element.css
@@ -49,3 +49,160 @@ textarea {
     position: static;
     text-transform: lowercase;
 }
+
+.custom-control.custom-checkbox label {
+    line-height: 1.9;
+    font-size: .825rem !important;
+    font-weight: 600 !important;
+}
+
+.custom-control.custom-checkbox input:checked+label {
+    margin-bottom: 0.945rem;
+}
+
+.custom-checkbox .custom-control-input:checked~.custom-control-label::after {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e");
+}
+
+.custom-checkbox.d-flex .custom-control-label {
+    width: 100%;
+    margin-bottom: 0.945rem;
+}
+
+.custom-checkbox.d-flex .custom-control-label::before,
+.custom-checkbox.d-flex .custom-control-label::after {
+    left: auto;
+    right: 0;
+}
+
+.custom-switch .custom-control-label::before {
+    left: -2.25rem;
+}
+
+.custom-switch .custom-control-label::after {
+    left: calc(-2.25rem + 2px);
+}
+
+/* Select2 */
+select~span.select2 * {
+    font-size: .875rem;
+}
+
+span.selection {
+    width: 100%;
+}
+
+.select2-container .select2-selection--single,
+.select2-container--default.select2-container--focus .select2-selection--multiple,
+.select2-container--default .select2-selection--multiple,
+.select2-container--default .select2-search--dropdown .select2-search__field {
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__placeholder {
+    color: #b5c1d2;
+}
+
+.select2-container--default .select2-selection--single {
+    border-color: #dee2e6 !important;
+    border-radius: 0.25rem !important;
+    height: 100%;
+    outline-width: 0px;
+}
+
+.form-group.error select~.select2-container--default .select2-selection--single {
+    border-color: #fb6340 !important;
+}
+
+.select2-container--default .select2-selection--single:focus-visible {
+    border: 1px solid #5e72e4 !important;
+}
+
+.select2-container--default .select2-selection--single[aria-expanded="true"] {
+    border-color: #5e72e4 !important;
+}
+
+.select2-container--default .select2-results__option--selected {
+    background-color: #dee2e6;
+    display: none;
+}
+
+.select2-selection__rendered {
+    padding-top: 1.625rem;
+    padding-bottom: 0.125rem;
+    padding-left: 0em !important;
+    padding-right: 1rem;
+    color: #8898aa !important;
+}
+
+.select2-container--open .select2-dropdown {
+    border-color: #5e72e4;
+    padding: 0px;
+    left: 0px;
+}
+
+.select2-search.select2-search--dropdown {
+    padding: 6px;
+}
+
+.select2-container--open .select2-dropdown.error {
+    border-color: #fb6340 !important;
+}
+
+.select2-dropdown.select2-dropdown--below {
+    top: -6px !important;
+    padding-bottom: 1px;
+    box-shadow: 0 3px 9px rgb(50 50 9 / 0%), 3px 4px 8px rgb(94 114 228 / 10%);
+}
+
+.select2-dropdown.select2-dropdown--above {
+    display: flex;
+    flex-direction: column-reverse;
+    top: 6px !important;
+}
+
+.select2-container--default .select2-search--dropdown .select2-search__field {
+    border-color: #dee2e6;
+}
+
+.select2-dropdown.select2-dropdown--below {
+    border-bottom-left-radius: 0.275rem;
+    border-bottom-right-radius: 0.275rem;
+}
+
+.select2-dropdown.select2-dropdown--above {
+    border-top-left-radius: 0.275rem;
+    border-top-right-radius: 0.275rem;
+}
+
+.select2-results {
+    position: relative;
+    overflow: hidden;
+}
+
+.select2-dropdown.select2-dropdown--below .select2-results {
+    border-bottom-left-radius: 0.225rem;
+    border-bottom-right-radius: 0.225rem;
+    bottom: -1px;
+    border-top: 1px dashed #5e72e4;
+}
+
+.select2-dropdown.select2-dropdown--above .select2-results {
+    border-top-left-radius: 0.225rem;
+    border-top-right-radius: 0.225rem;
+    border-bottom: 1px dashed #5e72e4;
+}
+
+.select2-dropdown.error .select2-results {
+    border-color: #fb6340;
+}
+
+.select2-results .select2-results__option--highlighted {
+    background-color: var(--primary);
+    color: #fff !important;
+}
+
+.select2-results ul {
+    background-color: var(--primary);
+}
